--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,6 @@ body {
 #search-form {
   font: inherit;
   padding: 8px;
-  /* max-width: 320px; */
   margin-bottom: 16px;
   background-color: blueviolet;
   display: flex;
@@ -37,4 +36,29 @@ body {
 .search-btn:focus{
   background-color: rgb(18, 15, 35);
   color: white;
+}
+
+.info{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.gallery {
+  display: grid; 
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-auto-rows: 380px;
+  grid-gap: 15px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.img-card {
+  height: 240px;
+  width: 100%;
+  object-fit: cover;
+  transition: transform var(--animation-duration) var(--timing-function);
 }
