--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,3 +62,15 @@ body {
   object-fit: cover;
   transition: transform var(--animation-duration) var(--timing-function);
 }
+
+.photo-card{
+  cursor: pointer;
+  background-color: rgb(246, 239, 247);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.photo-card:hover,
+.photo-card:focus{
+  transform: scale(1.03);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
