--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,10 @@ body {
   line-height: 1.5;
 }
 
+button.hidden{
+   display: none;
+}
+
 #search-form {
   font: inherit;
   padding: 8px;
@@ -23,7 +27,8 @@ body {
 }
 
 .search-input,
-.search-btn{
+.search-btn,
+.load-more{
   font-size: 30px;
   border: 2px solid black;
   border-radius: 10px;
@@ -73,4 +78,16 @@ body {
 .photo-card:focus{
   transform: scale(1.03);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.load-more{
+background-color: blueviolet;
+display: block;
+margin: 20px auto;
+}
+
+.load-more:hover,
+.load-more:focus{
+  background-color: rgb(18, 15, 35);
+  color: white;
 }
